# PlatformKit

./: .gitignore  BuildPresets.py  CMakeLists.txt  CMakePresets.json
cmake/toolchains/: clang.cmake  mingw.cmake  msvc.cmake
include/PlatformKit/: DefinesWin32.h  IOEvents.h  Keyboard.h  WindowEvents.h  WindowWin32.h
install/: PlatformKitConfig.cmake.in
install/clang-debug/include/PlatformKit/: IOEvents.h  Mouse.h  Structs.h  Window.h
install/clang-debug/lib/cmake/PlatformKit/: PlatformKitConfig.cmake  PlatformKitTargets-debug.cmake  PlatformKitTargets.cmake
install/clang-release/include/PlatformKit/: InputStateTracker.h  WindowWin32.h
src/PlatformKit/: WindowWin32.cpp
tests/: test.cpp
